--- a/Galaxy_S52.css
+++ b/Galaxy_S52.css
@@ -372,15 +372,16 @@ form {
 /*********************** Caracteristicas **************************/
 
 .d-size{
-    width: 260px;
-    margin: auto;
+    width: 260px;    
 }
 
 .child-d{
     display: flex;    
-    width: 125px;
+    width: 130px;
     height: 50px;
-    align-items: center;    
+    align-items: center;
+    padding: .5rem;
+        
 }
 
 .child-d:hover{
@@ -419,9 +420,12 @@ form {
 
 .main-Cara{
     height: 450px;
-    width: 272px;
-    position: relative;
+    width: 272px;    
     overflow: hidden;
+}
+
+.p-rela{
+    position: relative;    
 }
 
 /*********************** Otros **************************/
